objects/Lead_Routing_Key__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>contains the queue names and the keywords for routing are stored here</description>
    <fields>
        <fullName>Keyword__c</fullName>
        <description>the keyword to route to queue</description>
        <label>Keyword</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>queue_name__c</fullName>
        <description>the name of the queue</description>
        <label>queue name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Lead Routing Keys</label>
</CustomObject>